--- a/index.html
+++ b/index.html
@@ -449,7 +449,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_stakeholders">1.3. Stakeholders</a></li>
 </ul>
 </li>
-<li><a href="#section-architecture-constraints">2. Architecture Constraints</a></li>
+<li><a href="#section-architecture-constraints">2. Architecture Constraints</a>
+<ul class="sectlevel2">
+<li><a href="#_technical_constraints">2.1. Technical Constraints</a></li>
+<li><a href="#_business_constraints">2.2. Business Constraints</a></li>
+</ul>
+</li>
 <li><a href="#section-system-scope-and-context">3. System Scope and Context</a>
 <ul class="sectlevel2">
 <li><a href="#_business_context">3.1. Business Context</a></li>
@@ -765,6 +770,46 @@ These stakeholders determine the extent and the level of detail of your work and
 <div class="sect1">
 <h2 id="section-architecture-constraints">2. Architecture Constraints</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>The constraints will be divided into business and technical.</p>
+</div>
+<div class="sect2">
+<h3 id="_technical_constraints">2.1. Technical Constraints</h3>
+<div class="paragraph">
+<p>These constraints will limit the team&#8217;s ability to change the technology environment.</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>TypeScript &#8594; TypeScript is the programming language in which the project has to be implemented.</p>
+</li>
+<li>
+<p>React &#8594; The application must be implemented using the React Framework.</p>
+</li>
+<li>
+<p>Github &#8594; The project must be constantly updated in GitHub, showing all the members collaborations.</p>
+</li>
+<li>
+<p>Arc42 &#8594; The documentation must follow the Arc42 templates.</p>
+</li>
+<li>
+<p>SOLID &#8594; The project will user SOLID user pods as data retrieval.</p>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_business_constraints">2.2. Business Constraints</h3>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Time &#8594; The project must be done in 11 weeks.</p>
+</li>
+<li>
+<p>Team &#8594; The teams is composed of 6 members.</p>
+</li>
+</ol>
+</div>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -786,6 +831,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 </div>
 <div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1886,7 +1932,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-12 11:30:04 +0100
+Last updated 2022-02-10 13:20:13 +0100
 </div>
 </div>
 </body>
