--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#section-system-scope-and-context">3. System Scope and Context</a>
 <ul class="sectlevel2">
-<li><a href="#_3_1_business_context">3.1. 3.1 Business Context</a></li>
-<li><a href="#_3_2_technical_context">3.2. 3.2 Technical Context</a></li>
+<li><a href="#_business_context">3.1. Business Context</a></li>
+<li><a href="#_technical_context">3.2. Technical Context</a></li>
 </ul>
 </li>
 <li><a href="#section-solution-strategy">4. Solution Strategy</a>
@@ -867,7 +867,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 <h2 id="section-system-scope-and-context">3. System Scope and Context</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_3_1_business_context">3.1. 3.1 Business Context</h3>
+<h3 id="_business_context">3.1. Business Context</h3>
 <div class="sidebarblock">
 <div class="content">
 <table class="tableblock frame-all grid-all stretch">
@@ -913,7 +913,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_3_2_technical_context">3.2. 3.2 Technical Context</h3>
+<h3 id="_technical_context">3.2. Technical Context</h3>
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
@@ -930,11 +930,13 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 <col style="width: 50%;">
 <col style="width: 50%;">
 </colgroup>
-<tbody>
+<thead>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Technical Interface</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Description</p></td>
+<th class="tableblock halign-left valign-top">Technical Interface</th>
+<th class="tableblock halign-left valign-top">Description</th>
 </tr>
+</thead>
+<tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SOLID</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Architecture followed in the project in the use of data</p></td>
