--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#section-concepts">8. Cross-cutting Concepts</a>
 <ul class="sectlevel2">
-<li><a href="#_domain_model">8.1. Domain model</a></li>
+<li><a href="#_domain_model_simple_class_diagram">8.1. Domain model - Simple Class Diagram</a></li>
 </ul>
 </li>
 <li><a href="#section-design-decisions">9. Design Decisions</a></li>
@@ -1531,7 +1531,7 @@ on this list.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_domain_model">8.1. Domain model</h3>
+<h3 id="_domain_model_simple_class_diagram">8.1. Domain model - Simple Class Diagram</h3>
 <div class="paragraph">
 <p><span class="image"><img src="./images/Clase-UML.png" alt="UML Diagram"></span></p>
 </div>
@@ -1934,7 +1934,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-12 11:30:15 +0100
+Last updated 2022-02-10 13:20:13 +0100
 </div>
 </div>
 </body>
