--- a/index.html
+++ b/index.html
@@ -608,8 +608,8 @@ According to the distance between the distribution center and user&#8217;s addre
 <div class="sect3">
 <h4 id="_technical_deployment">1.1.1. Technical Deployment</h4>
 <div class="paragraph">
-<p>DeDe will be implemented using TypeScript with React framework, and data will be stored in an instance of MySQL database.
-The web service and deployment will be provided by Azure, since it provides 100$ bonus for students and a set of diagnosis tools to test loads and web performance.</p>
+<p>DeDe will be implemented using TypeScript with React framework, and data will be stored in a Firebase database.
+The web service and deployment will also be provided by Firebase, since it provides 300$ bonus for students and a set of diagnosis tools to test loads and web performance.</p>
 </div>
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -1934,7 +1934,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-12 11:30:15 +0100
+Last updated 2022-02-10 13:20:13 +0100
 </div>
 </div>
 </body>
